# gd-logistic-to-quadratic-perceptron

./: README.md  check.py  m_cv.py  m_cv_quadratic.py  main.py  plot.py  pyproject.toml
results/: cifar10_cls01_idx_seed0.npy  linear_histories.pt
