[project]
name = "gd-qp"
version = "0.1.0"
description = ""
authors = [
    {name = "ton1c",email = "sembl1@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "torchvision (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
